Add Install instructions

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -1,3 +1,12 @@
+# Install instructions:
+# git clone https://github.com/denysdovhan/spaceship-prompt.git "$ZSH_CUSTOM/themes/spaceship-prompt" --depth=1
+# ln -s "$ZSH_CUSTOM/themes/spaceship-prompt/spaceship.zsh-theme" "$ZSH_CUSTOM/themes/spaceship.zsh-theme" 
+# git clone https://github.com/superbrothers/zsh-kubectl-prompt.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-kubectl-prompt
+# git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting
+
+
+
+
 # If you come from bash you might have to change your $PATH.
 # export PATH=$HOME/bin:/usr/local/bin:$PATH
 
@@ -71,13 +80,13 @@ ZSH_THEME="spaceship"
 plugins=(
     git
     kubectl
+    zsh-kubectl-prompt
     gcloud
     zsh-syntax-highlighting
 )
 
 source $ZSH/oh-my-zsh.sh
 
-source ~/.zsh_data/zsh-kubectl-prompt/kubectl.zsh
 RPROMPT='%{$fg[blue]%}($ZSH_KUBECTL_PROMPT)%{$reset_color%}'
 
 # User configuration
